Fix max-width on tablet

--- a/1-wisp-the-cat-landing/css/style.css
+++ b/1-wisp-the-cat-landing/css/style.css
@@ -220,6 +220,7 @@ footer {
     .card img {
         width: 100%;
         height: auto;
+        max-width: 100%;
     }
 
     .card-text {
